objects/Case_Request_Property__mdt.object
<CustomObject>
    <fields>
        <fullName>Alliance_Request_Due_Date_Minimum__c</fullName>
        <label>Alliance Request Due Date Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_APO_Request_Due_Date_Minimum__c</fullName>
        <label>CRM APO Request Due Date Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Request_Due_Date_Minimum__c</fullName>
        <inlineHelpText>Please define minimum number of days between record creation and due date for IT Request Cases (ex. 7)</inlineHelpText>
        <label>IT Request Due Date Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Request_Due_Date_Minimum__c</fullName>
        <inlineHelpText>Please define minimum number of days between record creation and due date for Legal Request Cases (ex. 7)</inlineHelpText>
        <label>Legal Request Due Date Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Request_Due_Date_Minimum__c</fullName>
        <label>Marketing Request Due Date Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Request_Due_Date_Minimum__c</fullName>
        <inlineHelpText>Please define minimum number of days between record creation and due date for Resource Request Cases (ex. 7)</inlineHelpText>
        <label>Resource Request Due Date Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Operation_Request_Due_Date_Minimum__c</fullName>
        <label>Sales Operation Request Due Date Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Request Property</label>
    <pluralLabel>Case Request Properties</pluralLabel>
</CustomObject>